<resources>
    <string name="app_name">Ace Explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu_internal_storage">Internal Storage</string>
    <string name="nav_menu_root">Root</string>
    <string name="nav_menu_ext_storage">External SD</string>
    <string name="nav_menu_music">Music</string>
    <string name="nav_menu_video">Videos</string>
    <string name="nav_menu_image">Images</string>
    <string name="nav_menu_docs">Documents</string>
    <string name="nav_header_storages">Storages</string>
    <string name="nav_header_favourites">Favorites</string>
    <string name="nav_header_collections">Library</string>
    <string name="nav_header_others">Others</string>
    <string name="msg_free">free of</string>
    <string name="empty">Empty</string>
    <plurals name="number_of_files">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <string name="downloads">Downloads</string>
    <string name="action_rename">Rename</string>
    <string name="action_info">Properties</string>
    <string name="action_archive">Archive</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="msg_cut_copy">file(s) copied to clipboard</string>
    <string name="msg_delete_success">deleted successfully</string>
    <string name="msg_copy_failure">Copy operation failed</string>
    <string name="msg_move_failure">Move operation failed</string>
    <string name="msg_delete_failure">Delete operation failed</string>
    <string name="dialog_skip">Skip</string>
    <string name="dialog_replace">Replace</string>
    <string name="dialog_keep_both">Keep both files</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_file_exists">File exists</string>
    <string name="dialog_from_placeholder">From</string>
    <string name="dialog_to_placeholder">To</string>
    <string name="background">Background</string>
    <string name="dialog_delete_title">Are you sure you want to delete %d files?</string>
    <string name="msg_ok">OK</string>
    <string name="no_files">No files</string>
    <string name="msg_error_invalid_name">Enter a valid name</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="date_modified">Date Modified:</string>
    <string name="hidden">Hidden:</string>
    <string name="readable">Readable:</string>
    <string name="writeable">Writeable:</string>
    <string name="md5">MD5:</string>
    <string name="permissions">Permissions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="properties">Properties</string>
    <string name="new_folder">New folder</string>
    <string name="new_file">New file</string>
    <string name="rate_us">Rate Us</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="msg_added_to_fav">Added to Favourites</string>
    <string name="msg_error_not_supported">No app to handle the action</string>
    <string name="permission_request">Need storage permission to show all the files</string>
    <string name="action_grant">GRANT</string>
    <string name="action_view_list">List view</string>
    <string name="action_view_grid">Grid view</string>
    <string name="extract_to">Extract to</string>
    <string name="open">Open</string>
    <string name="extracting">Extracting..</string>
    <string name="dialog_current_path">Current path</string>
    <string name="dialog_specify_path">Specify path</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="extract">Extract</string>
    <string name="dialog_title_browse">Choose folder</string>
    <string name="action_select_all">Select All</string>
    <string name="delete_fav">Delete favourite</string>
    <string name="action_search">Search</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_subs_light">Light</string>
    <string name="pref_subs_dark">Dark</string>
    <string name="pref_title_reset_fav">Reset favourites</string>
    <string name="pref_title_show_hidden">Show Hidden Files</string>
    <string name="pref_title_disable_dual">Dual pane in Landscape</string>
    <string name="pref_title_check_update">Check for updates</string>
    <string name="pref_title_change_lang">Language</string>
    <string name="pref_title_about">About Us</string>
    <string name="pref_title_version">Version</string>
    <string name="prefs_summary_dev">Developer</string>
    <string name="dev_name" translatable="false">Siju</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="more">more</string>
    <string name="drag">Drag</string>
    <string name="move">Move</string>
    <string name="msg_fav_reset">Favourites resetted to default.</string>
    <string name="pref_title_homescreen">Show HomeScreen</string>
    <string name="home_add">Add</string>
    <string name="home_docs">Docs</string>
    <string name="compressed">Compressed</string>
    <string name="apk">Apps</string>
    <string name="pdf">PDF</string>
    <string name="library_large">Large files</string>
    <string name="open_as">Open As</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="other">Other</string>
    <string name="create">Create</string>
    <string name="zip_progress_title">Creating zip</string>
    <string name="needsaccess">Write Access Required</string>
    <string name="needs_access_summary">Please choose the root directory of %1$s to grant write access to
        operate</string>
    <string name="error">Error</string>
    <string name="completed">Completed</string>
    <string name="msg_operation_failed">Operation failed</string>
    <string name="selected">selected</string>
    <string name="enter_name">Enter name</string>
    <string name="storage_low">Insufficient space</string>
    <string name="paste_conflict_remember">Remember</string>
    <string name="copying">Copying files</string>
    <string name="moving">Moving files</string>
    <string name="package_installer">Package Installer</string>
    <string name="view">View</string>
    <string name="install">Install</string>
    <string name="package_installer_content">Which action would you like to do?</string>
    <string name="open_source_license">Open source licenses</string>
    <string name="need_permission">Needs permission</string>
    <string name="permission_setting_hint">Tap Settings -> Permissions and then turn Storage on.</string>
    <string name="access_denied_external">Write access to External SD not granted</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_execute">Execute</string>
    <string name="permission_owner">Owner</string>
    <string name="permission_group">Group</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Organized Library</string>
    <string name="slide_1_desc">One click to media library from the homescreen.</string>
    <string name="slide_2_title">Peek and Pop</string>
    <string name="slide_2_desc">Peek and Pop your images and videos.</string>
    <string name="slide_3_title">Drag and Drop</string>
    <string name="slide_3_desc">Drag files from one folder to another!</string>
    <string name="action_sort">Sort</string>
    <string name="slide_4_title">Themes</string>
    <string name="slide_4_desc">Dark or Light way! Your choice.</string>
    <string name="count_placeholder" translatable="false">1/</string>
    <string name="percent_placeholder" translatable="false">%</string>
    <string name="no_music"> No Music files</string>
    <string name="fav_removed">Removed from favorites</string>
    <string name="img_accessibility_back">Back</string>
    <string name="img_accessibility_permission">Grant permission</string>
    <string name="img_accessibility_expand">Expand or Collapse</string>
    <string name="img_accessibility_brand">App logo</string>
    <string name="img_accessibility_icon_lib">Library icon</string>
    <string name="img_accessibility_storage_icon">Storage icon</string>
    <string name="test_banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9999245634890753/6045569427</string>
    <string name="unlock_full_version">Unlock full version</string>
    <string name="full_version_buy_ask">Full version removes annoying ads. Do you want to buy it?</string>
    <string name="dialog_title_picker">Choose music file</string>
    <string name="app_invite_title">App invite</string>
    <string name="app_invite_msg">Try this cool file manager !!</string>
    <string name="app_invite_failed">Sending invite failed.</string>
    <string name="browse">Browse</string>
    <string name="msg_error_unrooted">Root access denied.</string>
    <string name="billing_unsupported">In-app purchases not supported on this device.</string>
    <string name="action_more">More</string>
    <string name="directory">Directory</string>
    <string name="operation">Operation</string>
    <string name="extract_complete">Extract completed</string>
    <string name="clipboard">%d in clipboard</string>
    <string name="fav_exists">Favorite already exists.</string>
    <string name="msg_added_fav">%d item(s) added to Favorites.</string>
    <string name="header_source">Source</string>
    <string name="header_destination">Destination</string>
    <string name="error_unsupported">Not supported</string>
    <string name="copy_path">Copy path</string>
    <string name="text_copied_clipboard">Copied to clipboard.</string>
    <string name="analytics_text">Send analytics</string>
    <string name="analytics_summary">Help us improve app by sending anonymous usage data.</string>
    <string name="move_complete">Move Completed</string>
    <string name="library_gif" translatable="false">GIF</string>
    <string name="play_store" translatable="false">Play store</string>
    <string name="amazon_play_store" translatable="false">Amazon app store</string>
    <string name="dual_pane_intro_title">Dual pane</string>
    <string name="dual_pane_intro_subtitle">Dual mode for better usability.</string>
    <string name="sort_name">Name</string>
    <string name="sort_type">Type</string>
    <string name="sort_size">Size</string>
    <string name="sort_date">Date</string>
    <string name="ascending">Ascending</string>
    <string name="library_recent">Recent</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="all_tracks">All Songs</string>
    <string name="notifications">Notifications</string>
    <string name="alarms">Alarms</string>
    <string name="ringtones">Ringtones</string>
    <string name="podcasts">Podcasts</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="uninstall">Uninstall</string>
    <string name="package_name">Package name</string>
    <string name="version_name">Version</string>
    <string name="installed_source">Source</string>
    <string name="min_sdk">Min SDK</string>
    <string name="target_sdk">Target SDK</string>
    <string name="installed">Installed</string>
    <string name="updated">Updated</string>
</resources>