<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_rename_white"
        android:orderInCategory="1"
        android:title="@string/action_rename"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_cut_white"
        android:orderInCategory="2"
        android:title="@string/action_cut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_copy_white"
        android:orderInCategory="3"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white"
        android:orderInCategory="4"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="5"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_overflow"
        android:orderInCategory="6"
        android:title="@string/action_more"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_info"
                android:icon="@drawable/ic_info_white"
                android:title="@string/action_info"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_permissions"
                android:icon="@drawable/ic_permissions_white"
                android:title="@string/permissions"
                android:visible="false"
                app:showAsAction="ifRoom" />


            <item
                android:id="@+id/action_archive"
                android:icon="@drawable/ic_archive_white"
                android:title="@string/action_archive"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_extract"
                android:icon="@drawable/ic_extract_white"
                android:title="@string/extract_to"
                android:visible="false"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_fav"
                android:icon="@drawable/ic_favorite_white"
                android:title="@string/add_fav"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_hide"
                android:icon="@drawable/ic_hide_white"
                android:title="@string/hide"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>