<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_paste_white"
        android:title="@string/action_paste"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/action_search"
        android:orderInCategory="200"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />


    <item
        android:id="@+id/action_view"
        android:title="@string/action_view_list"
        android:orderInCategory="300"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never"
        android:orderInCategory="400"
        />


</menu>
