<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroupSort"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/padding_10"

    android:orientation="vertical">

    <RadioButton
        style="@style/RadioButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sort_name"
        android:text="@string/sort_name" />

    <RadioButton
        style="@style/RadioButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sort_type"
        android:text="@string/sort_type" />

    <RadioButton
        style="@style/RadioButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sort_size"
        android:text="@string/sort_size" />


    <RadioButton
        style="@style/RadioButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sort_date"
        android:text="@string/sort_date" />


</RadioGroup>