<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_file_info"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/drag"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:paddingTop="10dp"
            android:src="@drawable/ic_close_white" />


        <LinearLayout
            android:id="@+id/layoutPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textDialogTitle">

            <TextView
                android:id="@+id/textTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dialog_to_placeholder"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutPath"
            android:layout_margin="15dp"
            android:checkedButton="@+id/radioButtonCopy">

            <RadioButton
                android:id="@+id/radioButtonCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_copy" />

            <RadioButton
                android:id="@+id/radioButtonMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move" />
        </RadioGroup>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroupAction">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_cancel" />


            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_ok" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>